# Versao2_project02

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/project_02/: cache.py  github_client.py  latency_checker.py  main.py  parsers.py
tests/: test_cache.py  test_latency_checker.py  test_main.py  test_parsers.py
