[project]
name = "project-02"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry.scripts]
my_project = "project_02.main:get_github_status"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
